--- a/HMGreenCityMLM/Views/EmployeeRegistration/EmployeeChangePassword.cshtml
+++ b/HMGreenCityMLM/Views/EmployeeRegistration/EmployeeChangePassword.cshtml
@@ -9,74 +9,51 @@
 
 @using (Html.BeginForm("EmployeeChangePassword", "EmployeeRegistration", FormMethod.Post, new { @id = "form1" }))
 {
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Employee Change Password</span>
-                                        </a>
-                                    </li>
 
-                                </ul><div class="row">
-                                    <div class="col-md-4">
-                                        <div class="form-group row">
-                                            <label class="col-sm-6 col-form-label">Login Id <span style="color: red">*</span></label>
-                                            <div class="col-sm-9">
-                                                @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @Placeholder = "Login Id", @onchange = "getmembername(this);" })
-                                                <br />
-                                                <span id="txtname" style="color: #fff"></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group row">
-                                            <label class="col-sm-6 col-form-label">New Password <span style="color: red">*</span></label>
-                                            <div class="col-sm-9">
-                                                @Html.TextBoxFor(m => m.NewPassword, new { @class = "form-control", @Placeholder = "New Password" })
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group row">
-                                            <label class="col-sm-6 col-form-label">New Password <span style="color: red">*</span></label>
-                                            <div class="col-sm-9">
-                                                @Html.TextBoxFor(m => m.ConfirmPassword, new { @class = "form-control", @Placeholder = "Confirm Password", @onchange = "validatePassword(this);" })
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <span style="color: red">@TempData["EmployeeChangePassword"] </span>
-                                    <br />
-                                    <input type="submit" id="btnUpdate" class="btn btn-success" name="btnUpdate" value="Update" onclick="return validateform();" />
-
-                                </div>
-
-                            </div>
-
-                            <!-- content-wrapper ends -->
-                            <!-- partial:../../partials/_footer.html -->
-                            <!-- partial -->
+    <section>
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h6 class="mb-0">Employee Change Password</h6>
+                            <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                                @TempData["EmployeeChangePassword"]
+                            </p>
                         </div>
                     </div>
-                </section>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col-12 col-md-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-row">
+                            <div class="form-group col-md-3">
+                                <label>Login Id <span style="color: red">*</span></label>
+                             @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @Placeholder = "Login Id", @onchange = "getmembername(this);" })
+                            <br />
+                            <span id="txtname" style="color: #fff"></span>
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>New Password <span style="color: red">*</span></label>
+                                @Html.TextBoxFor(m => m.NewPassword, new { @class = "form-control", @Placeholder = "New Password" })
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Confirm Password <span style="color: red">*</span></label>
+                                @Html.TextBoxFor(m => m.ConfirmPassword, new { @class = "form-control", @Placeholder = "Confirm Password", @onchange = "validatePassword(this);" })
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label class="d-block">&nbsp;</label>
+                                <input type="submit" id="btnUpdate" class="btn btn-success" name="btnUpdate" value="Update" onclick="return validateform();" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 }
 
 <script>
