--- a/HMGreenCityMLM/Views/Shared/_Menu.cshtml
+++ b/HMGreenCityMLM/Views/Shared/_Menu.cshtml
@@ -2,7 +2,7 @@
 
 <ul class="sidebar-menu">
     <li class="dropdown active">
-        <a href="/Admin/AdminDashBoard" class="nav-link has-dropdown">
+        <a href="/Admin/AdminDashBoard">
             <i data-feather="monitor"></i><span>Dashboard</span>
         </a>
     </li>
