--- a/HMGreenCityMLM/Views/Accounts/ApprovepayoutRequest.cshtml
+++ b/HMGreenCityMLM/Views/Accounts/ApprovepayoutRequest.cshtml
@@ -6,13 +6,23 @@
 
  
 
-<span style="color: red">@TempData["Topup"] </span>
-<br />
 <div class="app-content content">
     <div class="content-overlay"></div>
     <div class="header-navbar-shadow"></div>
     <div class="content-wrapper">
-        <div class="content-header row">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h6 class="mb-0">Approve Payout Request</h6>
+                            <p style="color: red;display: block; margin-bottom:0px;">
+                                @TempData["Topup"]
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="content-body">
             <!-- users edit start -->
@@ -20,15 +30,6 @@
                 <div class="card">
                     <div class="card-content">
                         <div class="card-body">
-                            <ul class="nav nav-tabs mb-3" role="tablist">
-                                <li class="nav-item">
-                                    <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                       aria-controls="account" role="tab" aria-selected="true">
-                                        <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block"> Approve Payout Request </span>
-                                    </a>
-                                </li>
-
-                            </ul>
                             <div class="tab-content">
                                 <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
 
