--- a/HMGreenCityMLM/Views/Admin/AdvancePaymentReport.cshtml
+++ b/HMGreenCityMLM/Views/Admin/AdvancePaymentReport.cshtml
@@ -15,7 +15,19 @@
         <div class="content-overlay"></div>
         <div class="header-navbar-shadow"></div>
         <div class="content-wrapper">
-            <div class="content-header row">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center justify-content-between">
+                                <h6 class="mb-0">Advance Payment Report</h6>
+                                <p style="color: red;display: block; margin-bottom:0px;">
+
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="content-body">
                 <!-- users edit start -->
@@ -23,39 +35,30 @@
                     <div class="card">
                         <div class="card-content">
                             <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Advance Payment Report </span>
-                                        </a>
-                                    </li>
-
-                                </ul>
                                 <div class="tab-content">
                                     <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
 
                                         <div class="row">
-                                            <div class="col-md-3 form-group">
+                                            <div class="col-md-2 form-group">
                                                 <label>Login ID</label>
                                                 @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login ID" })
                                                 @Html.HiddenFor(m => m.ToLoginID)
                                             </div>
-                                            <div class="col-lg-3 form-group">
+                                            <div class="col-lg-2 form-group">
                                                 <label>From Date </label>
                                                 @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
                                             </div>
-                                            <div class="col-lg-3 form-group">
+                                            <div class="col-lg-2 form-group">
                                                 <label>To Date </label>
                                                 @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
                                             </div>
-                                            <div class="col-lg-3 form-group">
-                                                Downline
+                                            <div class="col-lg-2 form-group">
+                                                <label>Downline </label> <br />
                                                 @Html.CheckBoxFor(m => m.IsDownline)
                                             </div>
-                                            <div class="col-md-6 form-group">
-                                                <br />
-                                                <input type="submit" class="btn btn-success pull-left" value="Get Details" onclick="return validateLogin();" name="btnDetails" />
+                                            <div class="col-md-2 form-group">
+                                                <label class="d-block">&nbsp; </label>
+                                                <input type="submit" class="btn btn-success" value="Get Details" onclick="return validateLogin();" name="btnDetails" />
                                             </div>
                                         </div>
                                         <div class="row">
