--- a/HMGreenCityMLM/Views/AdminReports/UpdatePlotDetails.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/UpdatePlotDetails.cshtml
@@ -14,7 +14,19 @@
         <div class="content-overlay"></div>
         <div class="header-navbar-shadow"></div>
         <div class="content-wrapper">
-            <div class="content-header row">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center justify-content-between">
+                                <h6 class="mb-0">Update Plot Details</h6>
+                                <p style="color: red;display: block; margin-bottom:0px;">
+
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="content-body">
                 <!-- users edit start -->
@@ -22,49 +34,41 @@
                     <div class="card">
                         <div class="card-content">
                             <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">  Update Plot Details </span>
-                                        </a>
-                                    </li>
-                                </ul>
                                 <div class="tab-content">
                                     <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
 
                                         <div class="row">
                                             <div class="col-md-12 table-responsive">
                                                 <div class="row">
-                                                    <div class="col-lg-3">
-                                                        Login Id
+                                                    <div class="col-lg-3 mb-3">
+                                                       <label> Login Id</label>
                                                         @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
                                                         @Html.HiddenFor(m => m.ToLoginID)
                                                     </div>
 
-                                                    <div class="col-lg-3">
-                                                        Name
+                                                    <div class="col-lg-3 mb-3">
+                                                        <label> Name</label>
                                                         @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
                                                     </div>
-                                                    <div class="col-lg-3">
-                                                        Site
+                                                    <div class="col-lg-3 mb-3">
+                                                        <label>Site</label>
                                                         @Html.DropDownListFor(m => m.SiteId, new SelectList(ViewBag.ddlSite, "Value", "Text"), new { @class = "form-control" })
                                                     </div>
-                                                    <div class="col-md-3">
-                                                        Status
+                                                    <div class="col-md-3 mb-3">
+                                                        <label>  Status</label>
                                                         @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlstatus, "Value", "Text"), new { @class = "form-control" })
                                                     </div>
-                                                    <div class="col-lg-3">
-                                                        From Date
+                                                    <div class="col-lg-3 mb-3">
+                                                        <label>  From Date</label>
                                                         @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control" })
                                                     </div>
-                                                    <div class="col-lg-3">
-                                                        To Date
+                                                    <div class="col-lg-3 mb-3">
+                                                        <label>To Date</label>
                                                         @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control"})
                                                     </div>
 
-                                                    <div class="col-lg-3">
-                                                        Business Type
+                                                    <div class="col-lg-3 mb-3">
+                                                        <label>Business Type</label>
                                                         <select id="BusinessType" name="BusinessType" class="form-control">
                                                             <option value="">All Business</option>
                                                             <option value="1">New Business</option>
@@ -72,30 +76,29 @@
                                                         </select>
                                                     </div>
 
-                                                    <div class="col-lg-3">
-                                                        IsDownline
+                                                    <div class="col-lg-3 mb-3">
+                                                        <label> IsDownline</label><br />
                                                         @Html.CheckBoxFor(m => m.IsDownline)
                                                     </div>
 
 
-                                                    <div class="col-lg-3" id="divTeam" style="display:none">
-                                                        Team LoginId<span style="color:red">*</span>
+                                                    <div class="col-lg-3 mb-3" id="divTeam" style="display:none">
+                                                        <label> Team LoginId<span style="color:red">*</span></label>
                                                         @Html.TextBoxFor(m => m.TeamLoginId, new { @class = "form-control" })
                                                         @Html.HiddenFor(m => m.ToTeamLoginId)
                                                     </div>
-                                                    <div class="col-lg-3" id="divLeg" style="display:none">
-                                                        Leg
+                                                    <div class="col-lg-3 mb-3" id="divLeg" style="display:none">
+                                                        <label>Leg</label>
                                                         @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlLeg, "Value", "Text"), new { @class = "form-control" })
                                                     </div>
 
-                                                    <div class="col-lg-3">
-                                                        <br />
+                                                    <div class="col-lg-3 mb-3">
                                                         <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" onclick="return validateLogin();" />
                                                     </div>
 
                                                 </div>
                                                 <div class="dt-responsive table-responsive">
-                                                    <table class="table mb-0" id="example24">
+                                                    <table class="table mb-0" id="example23">
                                                         <thead>
                                                             <tr>
                                                                 <th>Sr No.</th>
