--- a/HMGreenCityMLM/Views/EmployeeRegistration/EmployeeDetails.cshtml
+++ b/HMGreenCityMLM/Views/EmployeeRegistration/EmployeeDetails.cshtml
@@ -9,112 +9,96 @@
 
 @using (Html.BeginForm("EmployeeDetails", "EmployeeRegistration", FormMethod.Post, new { @id = "form1" }))
 {
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Employee List</span>
-                                        </a>
-                                    </li>
 
-                                </ul>
-                                <div class="row">
-                                    <p style="color: red">@TempData["EmployeeDetails"] </p>
-                                </div>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-                                        <div class="row">
-                                            <div class="col-md-12 table-responsive">
-                                                <table class="table mb-0" id="example23">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>Sr No.</th>
-                                                            <th>Name</th>
-                                                          
-                                                            <th> Login Id</th>
-                                                            <th>Password</th>
-                                                            <th>Qualififcation</th>
-                                                            <th>Contact No</th>
-                                                            <th>Email Id</th>
-
-
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        @if (Model != null)
-                                                        {
-                                                            if (Model.lstemp != null)
-                                                            {
-                                                                int i = 1;
-                                                                foreach (var item in Model.lstemp)
-                                                                {
-
-                                                                    <tr>
-                                                                        <td>@i</td>
-                                                                        <td>@Html.DisplayFor(m => item.Name)</td>
-                                                                       
-                                                                        <td>@Html.DisplayFor(m => item.LoginId)</td>
-                                                                        <td>@Html.DisplayFor(m => item.Password)</td>
-                                                                        <td>@Html.DisplayFor(m => item.EducationQualififcation)</td>
-
-                                                                        <td>@Html.DisplayFor(m => item.Mobile)</td>
-                                                                        <td>@Html.DisplayFor(m => item.Email)</td>
-                                                                        <td>
-                                                                            <a href="/EmployeeRegistration/EmployeeRegistration?LoginID=@item.LoginId" class="btn btn-info btn-sm">
-                                                                                Edit
-                                                                            </a>
-                                                                        </td>
-                                                                       
-                                                                        <td >
-                                                                            @if (item.Status == "Inactive")
-                                                                            {
-                                                                                <a href="/EmployeeRegistration/ActivateEmployee?LoginId=@item.LoginId" class="btn btn-success btn-sm" onclick="return confirm('Sure you want to activate this User ?')">
-                                                                                    Activate
-                                                                                </a>
-                                                                            }
-                                                                            else
-                                                                            {
-                                                                                <a href="/EmployeeRegistration/DeactivateEmployee?LoginId=@item.LoginId" class="btn btn-danger btn-sm" onclick="return confirm('Sure you want to deactivate this User ?')">
-                                                                                    Deactivate
-                                                                                </a>
-                                                                            }
-                                                                        </td>
-
-                                                                    </tr>
-
-
-                                                                    i++;
-                                                                }
-                                                            }
-                                                        }
-                                                    </tbody>
-                                                </table>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- content-wrapper ends -->
-                            <!-- partial:../../partials/_footer.html -->
-                            <!-- partial -->
+    <section class="section">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h6 class="mb-0">Employee List</h6>
+                            <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                                @TempData["EmployeeDetails"]
+                            </p>
                         </div>
                     </div>
-                </section>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                                <thead>
+                                    <tr>
+                                        <th>Sr No.</th>
+                                        <th>Name</th>
+                                        <th> Login Id</th>
+                                        <th>Password</th>
+                                        <th>Qualififcation</th>
+                                        <th>Contact No</th>
+                                        <th>Email Id</th>
+                                        <th>&nbsp;</th>
+                                        <th>&nbsp;</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @if (Model != null)
+                                    {
+                                        if (Model.lstemp != null)
+                                        {
+                                            int i = 1;
+                                            foreach (var item in Model.lstemp)
+                                            {
+
+                                                <tr>
+                                                    <td>@i</td>
+                                                    <td>@Html.DisplayFor(m => item.Name)</td>
+
+                                                    <td>@Html.DisplayFor(m => item.LoginId)</td>
+                                                    <td>@Html.DisplayFor(m => item.Password)</td>
+                                                    <td>@Html.DisplayFor(m => item.EducationQualififcation)</td>
+
+                                                    <td>@Html.DisplayFor(m => item.Mobile)</td>
+                                                    <td>@Html.DisplayFor(m => item.Email)</td>
+                                                    <td>
+                                                        <a href="/EmployeeRegistration/EmployeeRegistration?LoginID=@item.LoginId" class="btn btn-info text-dark btn-sm">
+                                                            Edit
+                                                        </a>
+                                                    </td>
+
+                                                    <td>
+                                                        @if (item.Status == "Inactive")
+                                                        {
+                                                            <a href="/EmployeeRegistration/ActivateEmployee?LoginId=@item.LoginId" class="btn btn-success btn-sm" onclick="return confirm('Sure you want to activate this User ?')">
+                                                                Activate
+                                                            </a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <a href="/EmployeeRegistration/DeactivateEmployee?LoginId=@item.LoginId" class="btn btn-danger text-white btn-sm" onclick="return confirm('Sure you want to deactivate this User ?')">
+                                                                Deactivate
+                                                            </a>
+                                                        }
+                                                    </td>
+
+                                                </tr>
+
+
+                                                i++;
+                                            }
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 }
 
 
