--- a/HMGreenCityMLM/Views/Permission/SetPermission.cshtml
+++ b/HMGreenCityMLM/Views/Permission/SetPermission.cshtml
@@ -6,130 +6,110 @@
 
 @using (Html.BeginForm("SetPermission", "Permission", FormMethod.Post, new { @class = "tr-form" }))
 {
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <span style="color: red">
-                    @TempData["Permission"]
-                </span>
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Set Permission</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-                                        <div class="row">
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">Select User <span style="color: red">*</span></label>
-                                                    <div class="col-sm-9">
-                                                        @Html.DropDownListFor(m => m.Fk_UserId, new SelectList(ViewBag.ddluser, "Value", "Text"), new { @class = "form-control" })
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">Select Main Menu <span style="color: red">*</span></label>
-                                                    <div class="col-sm-9">
-                                                        @Html.DropDownListFor(m => m.Fk_FormTypeId, new SelectList(ViewBag.ddlformtype, "Value", "Text"), new { @class = "form-control" })
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label"></label>
-                                                    <div class="col-sm-9">
-                                                        <input type="submit" id="GetDetails" name="GetDetails" class="btn btn-primary" value="Get Details" onclick="return validateform();" />
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-12 table-responsive">
-                                                <table id="example23333" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>Sr No.</th>
-                                                            <th>Form</th>
-                                                            <th>Form View</th>
-                                                            <th>Join Now</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        @if (Model != null)
-                                                        {
-                                                            if (Model.lstpermission != null)
-                                                            {
-                                                                int i = 1;
-                                                                foreach (var item in Model.lstpermission)
-                                                                {
 
-                                                        <tr>
-                                                            <td>@i</td>
-                                                            <td>
-                                                                @Html.DisplayFor(m => item.FormName)
-
-                                                            </td>
-                                                            <td>
-                                                                <input type="hidden" name="hdFormtypeId_ @i" id="hdFormtypeId_ @i" value="@item.Fk_FormTypeId" />
-                                                                <input type="hidden" name="hdFormId_ @i" id="hdFormId_ @i" value="@item.Fk_FormId" />
-                                                                <input type="hidden" name="hdLoginid_ @i" id="hdLoginid_ @i" value="@item.Fk_UserId" />
-                                                                <input type="checkbox" name="chkSelect_ @i" id="chkSelect_ @i" @item.SelectedValue />            
-                                                            </td>
-                                                            <td>
-                                                                @if (i == 1 && item.Fk_FormTypeId == "9")
-                                                                {
-                                                                    <input type="checkbox" name="chkSave_ @i" id="chkSave_ @i" @item.FormSave />
-                                                                } 
-                                                                @if (i == 4 && item.Fk_FormTypeId == "9")
-                                                                {
-                                                                    <input type="checkbox" name="chkSave_ @i" id="chkSave_ @i" @item.FormSave />
-                                                                }                      
-                                                            </td>
-                                                            </tr>
-                                                                    i++;
-                                                                }
-                                                            <input type="hidden" id="hdRows" name="hdRows" value="@i" />
-                                                            }
-                                                        }
-                                                    </tbody>
-                                                </table>
-                                            </div>
-                                        </div>
-                                        <br />
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div class="form-group">
-                                                    <input type="submit" id="Save" name="Save" class="btn btn-success" value="Update" onclick="return validateform();" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- content-wrapper ends -->
-                            <!-- partial:../../partials/_footer.html -->
-                            <!-- partial -->
+    <section class="section">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h6 class="mb-0">Set Permission</h6>
+                            <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                                @TempData["Permission"]
+                            </p>
                         </div>
-                        <!-- main-panel ends --> 
                     </div>
-                </section>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col-12 col-md-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-row">
+                            <div class="form-group col-md-4">
+                                <label>Select User <span style="color: red">*</span></label>
+                                @Html.DropDownListFor(m => m.Fk_UserId, new SelectList(ViewBag.ddluser, "Value", "Text"), new { @class = "form-control" })
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Select Main Menu <span style="color: red">*</span></label>
+                                @Html.DropDownListFor(m => m.Fk_FormTypeId, new SelectList(ViewBag.ddlformtype, "Value", "Text"), new { @class = "form-control" })
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label class="d-block">&nbsp;</label>
+                                <input type="submit" id="GetDetails" name="GetDetails" class="btn btn-primary" value="Get Details" onclick="return validateform();" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                                <thead>
+                                    <tr>
+                                        <th>Sr No.</th>
+                                        <th>Form</th>
+                                        <th>Form View</th>
+                                        <th>Join Now</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @if (Model != null)
+                                    {
+                                        if (Model.lstpermission != null)
+                                        {
+                                            int i = 1;
+                                            foreach (var item in Model.lstpermission)
+                                            {
+
+                                                <tr>
+                                                    <td>@i</td>
+                                                    <td>
+                                                        @Html.DisplayFor(m => item.FormName)
+
+                                                    </td>
+                                                    <td>
+                                                        <input type="hidden" name="hdFormtypeId_ @i" id="hdFormtypeId_ @i" value="@item.Fk_FormTypeId" />
+                                                        <input type="hidden" name="hdFormId_ @i" id="hdFormId_ @i" value="@item.Fk_FormId" />
+                                                        <input type="hidden" name="hdLoginid_ @i" id="hdLoginid_ @i" value="@item.Fk_UserId" />
+                                                        <input type="checkbox" name="chkSelect_ @i" id="chkSelect_ @i" @item.SelectedValue />
+                                                    </td>
+                                                    <td>
+                                                        @if (i == 1 && item.Fk_FormTypeId == "9")
+                                                        {
+                                                            <input type="checkbox" name="chkSave_ @i" id="chkSave_ @i" @item.FormSave />
+                                                        }
+                                                        @if (i == 4 && item.Fk_FormTypeId == "9")
+                                                        {
+                                                            <input type="checkbox" name="chkSave_ @i" id="chkSave_ @i" @item.FormSave />
+                                                        }
+                                                    </td>
+                                                </tr>
+                                                i++;
+                                            }
+                                            <input type="hidden" id="hdRows" name="hdRows" value="@i" />
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    <input type="submit" id="Save" name="Save" class="btn btn-success" value="Update" onclick="return validateform();" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 }
 
 <script>
