--- a/HMGreenCityMLM/Views/Permission/SetmainId.cshtml
+++ b/HMGreenCityMLM/Views/Permission/SetmainId.cshtml
@@ -23,15 +23,9 @@
                     <div class="card">
                         <div class="card-content">
                             <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Set Main Id</span>
-                                        </a>
-                                    </li>
-
-                                </ul>
+                                <div class="card-header p-0">
+                                    <h4>Set Main Id</h4>
+                                </div>
                                 <div class="tab-content">
                                     <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
                                         <div class="row">
@@ -74,15 +68,9 @@
                     <div class="card">
                         <div class="card-content">
                             <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">List of Employee & Associate Setting</span>
-                                        </a>
-                                    </li>
-
-                                </ul>
+                                <div class="card-header p-0">
+                                    <h4>List of Employee & Associate Setting</h4>
+                                </div>
                                 <div class="tab-content">
                                     <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
                                         <div class="row">
