--- a/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
+++ b/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
@@ -90,7 +90,7 @@
             </div>
             <!-- Main Content -->
             <div class="main-content">
-                @RenderBody();
+                @RenderBody()
             </div>
             <footer class="main-footer">
                 <div class="footer-left">
@@ -101,15 +101,6 @@
             </footer>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
 
     <!-- General JS Scripts -->
     <script src="~/assetsAdmin/js/app.min.js"></script>
