--- a/HMGreenCityMLM/Views/AdminReports/DownLine.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/DownLine.cshtml
@@ -9,124 +9,134 @@
 
 @using (Html.BeginForm("Downline", "AdminReports", FormMethod.Post, new { @id = "form1" }))
 {
-    <p style="color: red">
-        @TempData["msg"]
-    </p>
-    <br />
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Downline List </span>
-                                        </a>
-                                    </li>
+  
+    
 
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-
-                                        <div class="row">
-                                            <div class="col-md-12 table-responsive">
-                                                <div class="row">
-                                                    <div class="col-md-3">
-                                                        LoginId
-                                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id", @required = "required" })
-                                                        @Html.HiddenFor(m => m.ToLoginID)
-                                                     </div>
-                                                   
-                                                    <div class="col-md-3">
-                                                        From Date
-                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From Date" })
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        To Date
-                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To Date" })
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        Leg
-                                                        @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlleg, "Value", "Text"), new { @class = "form-control" })
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        Status
-                                                        @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlStatus, "Value", "Text"), new { @class = "form-control" })
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        <br />
-                                                        <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" />
-                                                    </div>
-                                                </div>
-
-
-                                                <br />
-                                                <div class="dt-responsive table-responsive">
-                                                    <table class="table mb-0" id="example23">
-                                                        <thead>
-                                                            <tr>
-                                                                <th>Sr No.</th>
-                                                                <th>Login Id</th>
-                                                                @*<th>Password</th>*@
-                                                                <th>Name</th>
-                                                                <th>Leg</th>
-                                                                <th>Joining Date</th>
-                                                                <th>Package</th>
-                                                                <th>Activation Date</th>
-                                                                <th>Mobile No</th>
-                                                                <th>Status</th>
-                                                            </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                            @if (Model != null)
-                                                            {
-                                                                if (Model.lstassociate != null)
-                                                                {
-                                                                    int i = 1;
-                                                                    foreach (var Item in Model.lstassociate)
-                                                                    {
-                                                                        <tr class="text-left">
-                                                                            <td>@i</td>
-
-                                                                            <td>@Item.LoginId</td>
-                                                                            @*<td>@Item.Password</td>*@
-                                                                            <td>@Item.Name</td>
-                                                                            <td>@Item.Leg</td>
-                                                                            <td>@Item.JoiningDate</td>
-                                                                            <td>@Item.Package</td>
-                                                                            <td>@Item.PermanentDate</td>
-                                                                            <td>@Item.Mobile</td>
-
-                                                                            <td>@Item.Status</td>
-
-                                                                        </tr>
-                                                                        i++;
-                                                                    }
-
-                                                                }
-                                                            }
-
-                                                        </tbody>
-                                                    </table>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                    </div>
-                                </div>
-                            </div>
-                </section>
+    //==================================================================================================================
+    <section class="section">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h6 class="mb-0">Downline List</h6>
+                            <p style="color: red">
+                                @TempData["msg"]
+                            </p>
+                            @*<button class="btn btn-info"><a href="/Master/ProductMaster" class="text-white">Add New</a></button>*@
+                        </div>
+                        <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col-12 col-md-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-row">
+                                <div class="col-md-3 mb-3">
+                                    LoginId
+                                    @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id", @required = "required" })
+                                    @Html.HiddenFor(m => m.ToLoginID)
+                                </div>
+
+                                <div class="col-md-3 mb-3">
+                                    From Date
+                                    @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From Date" })
+                                </div>
+                                <div class="col-md-3 mb-3">
+                                    To Date
+                                    @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To Date" })
+                                </div>
+                                <div class="col-md-3 mb-3">
+                                    Leg
+                                    @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlleg, "Value", "Text"), new { @class = "form-control" })
+                                </div>
+                                <div class="col-md-3 mb-3">
+                                    Status
+                                    @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlStatus, "Value", "Text"), new { @class = "form-control" })
+                                </div>
+                                <div class="col-md-3 mb-3">
+                                    <br />
+                                    <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" />
+                                </div>
+                         
+
+
+
+
+
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                                <thead>
+                                    <tr>
+                                        <th>Sr No.</th>
+                                        <th>Login Id</th>
+                                        @*<th>Password</th>*@
+                                        <th>Name</th>
+                                        <th>Leg</th>
+                                        <th>Joining Date</th>
+                                        <th>Package</th>
+                                        <th>Activation Date</th>
+                                        <th>Mobile No</th>
+                                        <th>Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @if (Model != null)
+                                    {
+                                        if (Model.lstassociate != null)
+                                        {
+                                            int i = 1;
+                                            foreach (var Item in Model.lstassociate)
+                                            {
+                                                <tr class="text-left">
+                                                    <td>@i</td>
+
+                                                    <td>@Item.LoginId</td>
+                                                    @*<td>@Item.Password</td>*@
+                                                    <td>@Item.Name</td>
+                                                    <td>@Item.Leg</td>
+                                                    <td>@Item.JoiningDate</td>
+                                                    <td>@Item.Package</td>
+                                                    <td>@Item.PermanentDate</td>
+                                                    <td>@Item.Mobile</td>
+
+                                                    <td>@Item.Status</td>
+
+                                                </tr>
+                                                i++;
+                                            }
+
+                                        }
+                                    }
+
+                                </tbody>
+
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    //==================================================================================================================
+
+
+    
 
 
 }
