--- a/HMGreenCityMLM/Views/Master/NoticeMaster.cshtml
+++ b/HMGreenCityMLM/Views/Master/NoticeMaster.cshtml
@@ -6,101 +6,65 @@
 }
 @using (Html.BeginForm("NoticeMaster", "Master", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
-
+    //==================================================================================================================
     <span style="color: red">
         @TempData["NoticeMaster"]
     </span>
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Notice Master</span>
-                                        </a>
-                                    </li>
-
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-                                        <div class="row">
-                                            <div class="col-md-5">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-4 col-form-label">Title <span style="color: red">*</span></label>
-                                                    <div class="col-sm-8">
-                                                        @Html.TextBoxFor(m => m.Title, new { @class = "form-control", @placeholder = "Title" })
-
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                           
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-5">
-                                                <div class="form-group row">
-                                                    <label class="col-md-4 col-form-label">News <span style="color: red">*</span></label>
-                                                    <div class="col-md-8">
-                                                        @Html.TextAreaFor(m => m.News, new { @class = "form-control", @Placeholder = "Notification", @Rows = "7", @cols = "20" })
-                                                        @Html.HiddenFor(m => m.PK_NoticeMasterId, new { @class = "form-control" })
-
-
-
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-md-6">
-
-                                                    @if (Model.PK_NoticeMasterId == null)
-                                                    {
-                                                        <input type="submit" id="btnSave" class="btn btn-success" name="btnSave" value="Save" onclick="return validateform();" />
-                                                    }
-                                                    else
-                                                    {
-                                                        @Html.HiddenFor(m => m.PK_NoticeMasterId, new { @Value = @Model.PK_NoticeMasterId })
-                                                        <input type="submit" id="btnUpdate" class="btn btn-success" name="btnUpdate" value="Update" onclick="return validateform();" />
-                                                    }
-
-                                                    <a class="btn btn-primary" href="/Master/NoticeMasterList">Back To List</a>
-
-                                                    <span style="color: red">
-                                                        @TempData["NoticeMaster"]
-                                                    </span>
-
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                <!-- /.panel-body -->
-                            </div>
-                            <!-- /.panel -->
-                            <!-- /.panel -->
+    <section class="section">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h6 class="mb-0">Notice Master</h6>
+                            @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
                         </div>
-
-
-
-
+                        <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                        </p>
                     </div>
-
                 </div>
-            </section>
+            </div>
         </div>
-    </div>
-</div>
 
+        <div class="row">
+            <div class="col-12 col-md-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label>Title<span style="color: red">*</span></label>
+                                @Html.TextBoxFor(m => m.Title, new { @class = "form-control", @placeholder = "Title" })
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label>News<span style="color: red">*</span></label>
+                                @Html.TextAreaFor(m => m.News, new { @class = "form-control", @Placeholder = "Notification", @Rows = "7", @cols = "20" })
+                                @Html.HiddenFor(m => m.PK_NoticeMasterId, new { @class = "form-control" })
+                            </div>
+                            <div class="form-group col-md-3">
+                                @if (Model.PK_NoticeMasterId == null)
+                                {
+                                    <input type="submit" id="btnSave" class="btn btn-success" name="btnSave" value="Save" onclick="return validateform();" />
+                                }
+                                else
+                                {
+                                    @Html.HiddenFor(m => m.PK_NoticeMasterId, new { @Value = @Model.PK_NoticeMasterId })
+                                    <input type="submit" id="btnUpdate" class="btn btn-success" name="btnUpdate" value="Update" onclick="return validateform();" />
+                                }
 
+                                <a class="btn btn-primary" href="/Master/NoticeMasterList">Back To List</a>
 
+                                <span style="color: red">
+                                    @TempData["NoticeMaster"]
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    //==================================================================================================================
 }
 <style>
     .errortext {
