--- a/HMGreenCityMLM/Views/Master/PlotListfromCRM.cshtml
+++ b/HMGreenCityMLM/Views/Master/PlotListfromCRM.cshtml
@@ -10,131 +10,128 @@
 
 @using (Html.BeginForm("PlotListfromCRM", "Master", FormMethod.Post, new { @id = "form1", name = "formKYC" }))
 {
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Plot List</span>
-                                        </a>
-                                    </li>
-
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-
-                                        <div class="row">
-                                            <div class="col-md-12 table-responsive">
-                                                <div class="row mb-4">
-                                                    <div class="col-lg-3 form-group">
-                                                        Site
-                                                        @Html.DropDownListFor(m => m.SiteID, new SelectList(ViewBag.ddlSite, "Value", "Text"), new { @class = "form-control", @onchange = "return onSiteChange();" })
-                                                    </div>
-
-                                                    <div class="col-lg-3 form-group">
-                                                        Sector
-                                                        @Html.DropDownListFor(m => m.SectorID, new SelectList(ViewBag.ddlSector, "Value", "Text"), new { @class = "form-control", @onchange = "return onSectorChange();" })
-                                                    </div>
-                                                    <div class="col-lg-3 form-group">
-                                                        Block
-                                                        @Html.DropDownListFor(m => m.BlockID, new SelectList(ViewBag.ddlBlock, "Value", "Text"), new { @class = "form-control" })
-                                                    </div>
-                                                    <div class="col-lg-3 form-group">
-                                                            Plot No
-                                                            @Html.TextBoxFor(m => m.PlotNumber, new { @class = "form-control", @Placeholder = "Plot Number" })
-                                                            @Html.HiddenFor(m => m.PlotID)
-                                                        </div>
-                                                    <div class="col-lg-3 form-group">
-                                                       Plot Status
-                                                        <select id="Status" name="Status" class="form-control">
-                                                            <option value="0">-select-</option>
-                                                            <option value="A">Available</option>
-                                                            <option value="B">Booked</option>
-                                                            <option value="H">Hold</option>
-                                                            <option value="AL">Allotted</option>
-                                                        </select>
-                                                    </div>
-                                                    <div class="col-lg-3  mt-2">
-                                                     <input class="btn btn-success" type="submit" id="btnsearch" name="btnsearch" value="Search" />
-                                                    </div>
-                                                </div>
-
-                                                <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                                    <thead>
-
-                                                        <tr>
-                                                            <th>S No.</th>
-                                                            <th>Site Name</th>
-                                                            <th>Sector Name</th>
-                                                            <th>Block Name</th>
-                                                            <th>Plot Number</th>
-                                                            <th>PLCCharge</th>
-                                                            <th>Plot Amount</th>
-                                                            <th>Plot Rate</th>
-                                                            <th>Booking Percent</th>
-                                                            <th>Allottment Percent</th>
-                                                            <th>Plot Status</th>
-                                                            <th>Plot Size</th>
-                                                            <th>Total Area</th>
-                                                        </tr>
-
-                                                    </thead>
-                                                    <tbody>
-                                                        @if (Model != null)
-                                                        {
-                                                            if (Model.lstBlock1 != null)
-                                                            {
-                                                                int i = 1;
-                                                                foreach (var Item in Model.lstBlock1)
-                                                                {
-                                                                    <tr class="text-left">
-                                                                        <td>@i</td>
-                                                                        <td>@Item.SiteName</td>
-                                                                        <td>@Item.SectorName</td>
-                                                                        <td>@Item.BlockName</td>
-                                                                        <td>@Item.PlotNumber</td>
-                                                                        <td>@Item.PLCCharge</td>
-                                                                        <td>@Item.PlotAmount</td>
-                                                                        <td>@Item.PlotRate</td>
-                                                                        <td>@Item.BookingPercent</td>
-                                                                        <td>@Item.AllottmentPercent</td>
-                                                                        <td>@Item.PlotStatus</td>
-                                                                        <td>@Item.PlotSize</td>
-                                                                        <td>@Item.TotalArea</td>
-                                                                    </tr>
-
-                                                                    i++;
-                                                                }
-                                                            }
-                                                        }
-
-
-                                                    </tbody>
-                                                </table>
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+    
+    //==================================================================================================================
+    <section class="section">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h6 class="mb-0">Plot List</h6>
+                            @*<button class="btn btn-info"><a href="/Master/ProductMaster" class="text-white">Add New</a></button>*@
                         </div>
-                </section>
+                        <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col-12 col-md-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-row">
+                            <div class="form-group col-md-3">
+                                <label>Site<span style="color: red"></span></label>
+                                @Html.DropDownListFor(m => m.SiteID, new SelectList(ViewBag.ddlSite, "Value", "Text"), new { @class = "form-control", @onchange = "return onSiteChange();" })
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Sector <span style="color: red"></span></label>
 
-    
+                                @Html.DropDownListFor(m => m.SectorID, new SelectList(ViewBag.ddlSector, "Value", "Text"), new { @class = "form-control", @onchange = "return onSectorChange();" })
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Block<span style="color: red"></span></label>
+
+                                @Html.DropDownListFor(m => m.BlockID, new SelectList(ViewBag.ddlBlock, "Value", "Text"), new { @class = "form-control" })
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Plot No<span style="color: red"></span></label>
+
+                                @Html.TextBoxFor(m => m.PlotNumber, new { @class = "form-control", @Placeholder = "Plot Number" })
+                                @Html.HiddenFor(m => m.PlotID)
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Plot Status<span style="color: red"></span></label>
+                                <select id="Status" name="Status" class="form-control">
+                                    <option value="0">-select-</option>
+                                    <option value="A">Available</option>
+                                    <option value="B">Booked</option>
+                                    <option value="H">Hold</option>
+                                    <option value="AL">Allotted</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-md-3">
+                                <input class="btn btn-success mt-4" type="submit" id="btnsearch" name="btnsearch" value="Search" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                                <thead>
+                                    <tr>
+                                        <th>S No.</th>
+                                        <th>Site Name</th>
+                                        <th>Sector Name</th>
+                                        <th>Block Name</th>
+                                        <th>Plot Number</th>
+                                        <th>PLCCharge</th>
+                                        <th>Plot Amount</th>
+                                        <th>Plot Rate</th>
+                                        <th>Booking Percent</th>
+                                        <th>Allottment Percent</th>
+                                        <th>Plot Status</th>
+                                        <th>Plot Size</th>
+                                        <th>Total Area</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @if (Model != null)
+                                    {
+                                        if (Model.lstBlock1 != null)
+                                        {
+                                            int i = 1;
+                                            foreach (var Item in Model.lstBlock1)
+                                            {
+                                                <tr class="text-left">
+                                                    <td>@i</td>
+                                                    <td>@Item.SiteName</td>
+                                                    <td>@Item.SectorName</td>
+                                                    <td>@Item.BlockName</td>
+                                                    <td>@Item.PlotNumber</td>
+                                                    <td>@Item.PLCCharge</td>
+                                                    <td>@Item.PlotAmount</td>
+                                                    <td>@Item.PlotRate</td>
+                                                    <td>@Item.BookingPercent</td>
+                                                    <td>@Item.AllottmentPercent</td>
+                                                    <td>@Item.PlotStatus</td>
+                                                    <td>@Item.PlotSize</td>
+                                                    <td>@Item.TotalArea</td>
+                                                </tr>
+
+                                                i++;
+                                            }
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    //==================================================================================================================
+
+
 
 }
 
