--- a/HMGreenCityMLM/Views/Master/SiteMasterList.cshtml
+++ b/HMGreenCityMLM/Views/Master/SiteMasterList.cshtml
@@ -7,84 +7,76 @@
 
 @using (Html.BeginForm("SiteMasterList", "Master", FormMethod.Post, new { @id = "form1", name = "formKYC" }))
 {
-<span style="color: red">
-    @TempData["SiteMasterList"]
-</span>
-<div class="app-content content">
-    <div class="content-overlay"></div>
-    <div class="header-navbar-shadow"></div>
-    <div class="content-wrapper">
-        <div class="content-body">
-            <!-- users edit start -->
-            <section class="users-edit">
+    //==================================================================================================================
+    <section class="section">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="card">
-                    <div class="card-content">
-                        <div class="card-body">
-                            <ul class="nav nav-tabs mb-3" role="tablist">
-                                <li class="nav-item">
-                                    <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                       aria-controls="account" role="tab" aria-selected="true">
-                                        <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Site Master List</span>
-                                    </a>
-                                </li>
-
-                            </ul>
-                            <div class="tab-content">
-                                <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-                                    <div class="row">
-                                        <div class="col-md-12 table-responsive">
-                                            <table class="table mb-0" id="example23">
-                                                <thead>
-                                                    <tr>
-                                                        <th>S No.</th>
-                                                        <th>Site Name</th>
-                                                        <th>Location</th>
-                                                        @*<th>Action</th>*@
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    @if (Model != null)
-                                                    {
-                                                        if (Model.lstSite != null)
-                                                        {
-                                                            int i = 1;
-                                                            foreach (var Item in Model.lstSite)
-                                                            {
-                                                                <tr class="text-left">
-                                                                    <td>@i</td>
-                                                                    <td>@Item.SiteName</td>
-                                                                    <td>@Item.Location</td>
-
-                                                                    @*<td>
-                                                                        <a href="/Master/SiteMaster?SiteID=@Item.SiteID" class="btn btn-info btn-sm">Edit</a>
-                                                                        <a href="/Master/DeleteSite?id=@Item.SiteID" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this Site?');" name="btnDelete">Delete</a>
-                                                                       </td>*@
-
-                                                                </tr>
-
-                                                                i++;
-                                                            }
-                                                        }
-                                                    }
-
-
-                                                </tbody>
-                                            </table>
-                                            <span style="color: red">
-                                                @TempData["SiteMasterList"]
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h6 class="mb-0">Site List</h6>
+                            <span style="color: red">
+                                @TempData["SiteMasterList"]
+                            </span>
+                            @*<button class="btn btn-info"><a href="/Master/ProductMaster" class="text-white">Add New</a></button>*@
                         </div>
-
+                        <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                        </p>
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
-    </div>
-</div>
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                                <thead>
+                                    <tr>
+                                        <th>S No.</th>
+                                        <th>Site Name</th>
+                                        <th>Location</th>
+                                        @*<th>Action</th>*@
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @if (Model != null)
+                                    {
+                                        if (Model.lstSite != null)
+                                        {
+                                            int i = 1;
+                                            foreach (var Item in Model.lstSite)
+                                            {
+                                                <tr class="text-left">
+                                                    <td>@i</td>
+                                                    <td>@Item.SiteName</td>
+                                                    <td>@Item.Location</td>
+
+                                                    @*<td>
+                                                         <a href="/Master/SiteMaster?SiteID=@Item.SiteID" class="btn btn-info btn-sm">Edit</a>
+                                                         <a href="/Master/DeleteSite?id=@Item.SiteID" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this Site?');" name="btnDelete">Delete</a>
+                                                        </td>*@
+
+                                                </tr>
+
+                                                i++;
+                                            }
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                            <span style="color: red">
+                                @TempData["SiteMasterList"]
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    //==================================================================================================================
+
 }
 
 
