--- a/HMGreenCityMLM/Views/Transactions/DistributePayment.cshtml
+++ b/HMGreenCityMLM/Views/Transactions/DistributePayment.cshtml
@@ -6,146 +6,125 @@
 
 @using (Html.BeginForm("DistiributePayemntToMembers", "Transactions", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
-
-
-    <br />
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">  Distribute Payment </span>
-                                        </a>
-                                    </li>
-
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-
-                                        <div class="row">
-
-                                            <p style="color:red">
-                                                @TempData["DistributePayment"]
-                                            </p>
-                                            <div class="col-md-12 table-responsive">
-                                                <div class="row">
-                                                    <div class="col-lg-3">
-                                                        <div class="form-group">
-                                                            <label>Last Closing Date : </label>
-                                                            @Html.DisplayFor(m => m.LastClosingDate)
-                                                            <br />
-                                                            <label>Last Payout No : </label>
-                                                            @Html.DisplayFor(m => m.PayoutNo)
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        <div class="form-group">
-                                                            <label>Closing Date<span style="color:red">*</span></label>
-                                                            @Html.TextBoxFor(m => m.ClosingDate, new { @class = "form-control", @placeholder = "Closing Date" })
-                                                            @Html.HiddenFor(m => m.ClosingDateValid)
-                                                        </div>
-                                                    </div>
-
-
-                                                    <div class="col-lg-3">
-                                                        <br />
-                                                        @*<input class="btn btn-success" onclick="return validateform()" type="submit" value="Distribute Payment" />*@
-                                                      
-                                                        
-                                                        <a onclick="return validateform()" class="btn btn-success">
-                                                            Distribute Payment
-                                                        </a>
-                                                        
-                                                        
-                                                          <input type="submit" class="btn btn-success" value="Export To Excel" name="Export" formtarget="_blank" />
-                                                    </div>
-                                                </div>
-
-                                                <div class="dt-responsive table-responsive">
-                                                    <table class="table mb-0" id="example23">
-                                                        <thead>
-                                                            <tr>
-                                                                <th>Sr No.</th>
-                                                                <th>LoginID</th>
-                                                                <th>Name</th>
-                                                                <th>Binary Income </th>
-                                                                <th>Direct Income</th>
-                                                                <th hidden="hidden">Direct Leadership Bonus</th>
-                                                                <th>Gross Amount</th>
-                                                                <th>TDS Amount</th>
-                                                                <th>Processing</th>
-                                                                <th>Net Payable Amount</th>
-
-                                                            </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                            @if (Model != null)
-                                                            {
-                                                                if (Model.lstassociate != null)
-                                                                {
-                                                                    int i = 1;
-                                                                    foreach (var Item in Model.lstassociate)
-                                                                    {
-                                                                        <tr class="text-left">
-                                                                            <td>@i</td>
-                                                                            <td>@Item.LoginID</td>
-                                                                            <td>@Item.FirstName</td>
-                                                                            <td>@Item.BinaryIncome</td>
-                                                                            <td>@Item.DirectIncome</td>
-                                                                            <td hidden="hidden">@Item.LeadershipBonus</td>
-                                                                            <td>@Item.GrossIncome</td>
-                                                                            <td>@Item.TDS</td>
-                                                                            <td>@Item.Processing</td>
-                                                                            <td>@Item.NetIncome</td>
-                                                                        </tr>
-                                                                        i++;
-                                                                    }
-
-                                                                }
-                                                            }
-                                                        </tbody>
-                                                        <tfoot>
-                                                            <tr>
-                                                                <th></th>
-
-                                                                <th></th><th></th>
-                                                                <th style="text-align:right">Total Net Payable Amount</th>
-                                                                <th style="color:dodgerblue;font-weight:800">@ViewBag.Total</th>
-
-
-
-                                                                <th></th>
-                                                                <th></th>
-                                                                <th></th>
-                                                                <th></th>
-
-                                                            </tr>
-                                                        </tfoot>
-                                                    </table>
-                                                </div>
-                                            </div>
-                                    </div>
-                                </div>
-                            </div>
+    //==================================================================================================================
+    <section class="section">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h6 class="mb-0"> Distribute Payment </h6>
+                            <p style="color:red">
+                                @TempData["DistributePayment"]
+                            </p>
+                            @*<button class="btn btn-info"><a href="/Master/ProductMaster" class="text-white">Add New</a></button>*@
                         </div>
-                </section>
+                        <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-
-
-                        <!-- main-panel ends -->
+        <div class="row">
+            <div class="col-12 col-md-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-row">
+                            <div class="col-md-3 mb-3">
+                                <label>Last Closing Date : </label>
+                                @Html.DisplayFor(m => m.LastClosingDate)
+                                <br />
+                                <label>Last Payout No : </label>
+                                @Html.DisplayFor(m => m.PayoutNo)
+                            </div>
+                            <div class="col-md-3 mb-3">
+                                <label>Closing Date<span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.ClosingDate, new { @class = "form-control", @placeholder = "Closing Date" })
+                                @Html.HiddenFor(m => m.ClosingDateValid)
+                            </div>
+                            <div class="col-md-2 mb-3">
+                                <a onclick="return validateform()" class="btn btn-success mt-4">
+                                    Distribute Payment
+                                </a>
+                                @*<input type="submit" class="btn btn-success" value="Export To Excel" name="Export" formtarget="_blank" />*@
+                            </div>
+                            <div class="col-md-2 mb-3">
+                                @*<a onclick="return validateform()" class="btn btn-success">
+                                    Distribute Payment
+                                </a>*@
+                                <input type="submit" class="btn btn-success mt-4" value="Export To Excel" name="Export" formtarget="_blank" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                                <thead>
+                                    <tr>
+                                        <th>Sr No.</th>
+                                        <th>LoginID</th>
+                                        <th>Name</th>
+                                        <th>Binary Income </th>
+                                        <th>Direct Income</th>
+                                        <th hidden="hidden">Direct Leadership Bonus</th>
+                                        <th>Gross Amount</th>
+                                        <th>TDS Amount</th>
+                                        <th>Processing</th>
+                                        <th>Net Payable Amount</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @if (Model != null)
+                                    {
+                                        if (Model.lstassociate != null)
+                                        {
+                                            int i = 1;
+                                            foreach (var Item in Model.lstassociate)
+                                            {
+                                                <tr class="text-left">
+                                                    <td>@i</td>
+                                                    <td>@Item.LoginID</td>
+                                                    <td>@Item.FirstName</td>
+                                                    <td>@Item.BinaryIncome</td>
+                                                    <td>@Item.DirectIncome</td>
+                                                    <td hidden="hidden">@Item.LeadershipBonus</td>
+                                                    <td>@Item.GrossIncome</td>
+                                                    <td>@Item.TDS</td>
+                                                    <td>@Item.Processing</td>
+                                                    <td>@Item.NetIncome</td>
+                                                </tr>
+                                                i++;
+                                            }
+                                        }
+                                    }
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th style="text-align:right;width:185px;">Total Net Payable Amount</th>
+                                        <th style="color:dodgerblue;font-weight:800">@ViewBag.Total</th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                    </tr>
+                                </tfoot>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    //==================================================================================================================
 }
 <script src="../../WebsiteCss/js/jquery.js"></script>
 
