--- a/HMGreenCityMLM/Views/Transactions/PayoutDeduction.cshtml
+++ b/HMGreenCityMLM/Views/Transactions/PayoutDeduction.cshtml
@@ -10,92 +10,64 @@
 <!-- /.row -->
 @using (Html.BeginForm("PayoutWalletDeduction", "Transactions", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
-    <span style="color: red">
-        @TempData["pwallet"]
-    </span>
-    <br />
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
+    
+    //==================================================================================================================
+    <section class="section">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h6 class="mb-0">Payout Deduction</h6>
+                            <span style="color: red">
+                                @TempData["pwallet"]
+                            </span>
+                            @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
+                        </div>
+                        <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block"> Payout Deduction </span>
-                                        </a>
-                                    </li>
+        </div>
 
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+        <div class="row">
+            <div class="col-12 col-md-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-row">
+                            <div class="form-group col-md-4">
+                                <label> Login Id<span style="color: red">*</span></label>
+                                @Html.TextBoxFor(m => m.LoginID, new { @id = "txtLoginID", @placeholder = "LoginId", @class = "form-control", @onchange = "getMemberDetails(this);" })
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Name <span style="color: red">*</span></label>
+                                @Html.TextBoxFor(m => m.MemberName, new { @id = "txtMemberName", @class = "form-control", @disabled = "disabled" })
+                                @Html.HiddenFor(m => m.PK_UserID)
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Amount<span style="color: red">*</span></label>
+                                @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "Amount", @onkeypress = "return isNumberKey(event);" })
+                            </div>
 
-                                        <div class="row">
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">Login Id <span style="color: red">*</span></label>
-                                                    <div class="col-sm-9">
-                                                        @Html.TextBoxFor(m => m.LoginID, new { @id = "txtLoginID", @placeholder = "LoginId", @class = "form-control", @onchange = "getMemberDetails(this);" })
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">Name <span style="color: red">*</span></label>
-                                                    <div class="col-sm-9">
-                                                        @Html.TextBoxFor(m => m.MemberName, new { @id = "txtMemberName", @class = "form-control", @disabled = "disabled" })
-                                                        @Html.HiddenFor(m => m.PK_UserID)
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">Amount <span style="color: red">*</span></label>
-                                                    <div class="col-sm-9">
-                                                        @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "Amount", @onkeypress = "return isNumberKey(event);" })
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">Transaction Type <span style="color: red">*</span></label>
-                                                    <div class="col-sm-9">
-                                                        @Html.DropDownListFor(m => m.TransactionAction, new SelectList(ViewBag.ddlTransactionType, "Value", "Text"), new { @class = "form-control" })
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label"></label>
-                                                    <div class="col-sm-9">
-                                                        <input type="submit" id="btnDeductEwallet" class="btn btn-success" name="btnDeductEwallet" value="Update" onclick="return validate()" />
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="form-group col-md-4">
+                                <label>Transaction Type<span style="color: red">*</span></label>
+                                @Html.DropDownListFor(m => m.TransactionAction, new SelectList(ViewBag.ddlTransactionType, "Value", "Text"), new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <input type="submit" id="btnDeductEwallet" class="btn btn-success" name="btnDeductEwallet" value="Update" onclick="return validate()" />
                             </div>
                         </div>
                     </div>
-                </section>
+                </div>
             </div>
         </div>
-    </div>
-
-
+    </section>
+    //==================================================================================================================
+    
 
 }
 <style>
