--- a/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
+++ b/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
@@ -80,7 +80,7 @@
                         </div>
                         <div class="sidebar-user-details">
                             <div class="user-name">HM GREEN CITY</div>
-                            <div class="user-role">Administrator</div>
+                            <div class="user-role">Admin</div>
                         </div>
                     </div>
                     @{
