--- a/HMGreenCityMLM/Views/Admin/PayPayout.cshtml
+++ b/HMGreenCityMLM/Views/Admin/PayPayout.cshtml
@@ -48,8 +48,8 @@
                             @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id" })
                         </div>
                         @Html.HiddenFor(m => m.ToLoginID)
-                        <div class="form-group col-md-1">
-                            <label>Downline</label>
+                        <div class="form-group col-md-2">
+                            &nbsp;&nbsp;&nbsp;&nbsp;<label class="mt-5">Downline</label>
                             @Html.CheckBoxFor(m => m.IsDownline)
                         </div>
                         <div class="form-group col-md-3" id="divLeg" style="display: none">
@@ -69,6 +69,7 @@
                         {
                             int i = 1;
                     <div class="table-responsive">
+                        @*<table class="table table-striped table-hover" id="tableExport" style="width:100%;">*@
                         <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
                             <thead>
                                 <tr>
@@ -86,6 +87,7 @@
                                     <th id="thbranch" style="padding: 10px 50px;white-space: nowrap;display:none">Bank Branch</th>
                                     <th style="padding: 10px 50px;white-space: nowrap;display:none" id="thtransactionnumber">Transaction No</th>
                                     <th style="padding: 10px 50px;white-space: nowrap;display:none" id="thtransactiondate">Transaction Date</th>
+                                    <th style="display:none"></th>
 
                                 </tr>
                             </thead>
@@ -98,6 +100,10 @@
                                     <th></th>
                                     <th><b>Total</b></th>
                                     <th>@ViewBag.Total</th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
                                     <th></th>
                                     <th></th>
                                     <th></th>
