--- a/HMGreenCityMLM/Views/Downline/DownLineList.cshtml
+++ b/HMGreenCityMLM/Views/Downline/DownLineList.cshtml
@@ -7,96 +7,81 @@
 
 @using (Html.BeginForm("DownLineList", "Downline", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
-    <br />
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
+
+
+    //================================================================================
+
+    <section class="section">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h5 class="mb-0">Direct Downline List</h5>
+                            @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
+                        </div>
+                        <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Direct Downline List</span>
-                                        </a>
-                                    </li>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-row">
+                            <div class="form-group col-md-3">
+                                <label>  Name </label>
+                                @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>From Date  </label>
+                                @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>To Date  </label>
+                                @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Leg </label>
+                                @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlleg, "Value", "Text"), new { @class = "form-control" })
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Status</label>
+                                @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlStatus, "Value", "Text"), new { @class = "form-control" })
+                            </div>
 
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-
-                                        <div class="row">
-                                            <div class="col-lg-3">
-                                                <div class="form-group">
-                                                    <label>  Name </label>
-                                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-3">
-                                                <div class="form-group">
-                                                    <label>From Date  </label>
-                                                    @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-3">
-                                                <div class="form-group">
-                                                    <label>To Date  </label>
-                                                    @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-3">
-                                                <div class="form-group">
-                                                    <label>Leg </label>
-                                                    @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlleg, "Value", "Text"), new { @class = "form-control" })
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-3">
-                                                <div class="form-group">
-                                                    <label>Status</label>
-                                                    @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlStatus, "Value", "Text"), new { @class = "form-control" })
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-3">
-                                                <div class="form-group">
-                                                    <br />
-                                                    <input type="submit" id="btnSearch" class="btn btn-success pull-left" name="Search" value="Search" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="table-responsive">
-                                            <table class="table mb-0" id="example23">
-                                                <thead>
-                                                    <tr>
-                                                        <th>Sr No.</th>
-
-                                                        <th>Login Id</th>
-                                                        <th>Name</th>
-                                                        <th>Leg</th>
-                                                        <th>Joining Date</th>
-                                                        <th>Package</th>
-                                                        <th>Activation Date</th>
-                                                        <th>Mobile No</th>
-                                                        <th>Status</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    @if (Model != null)
-                                                {
-                                                    if (Model.lstassociate != null)
-                                                    {
-                                                        int i = 1;
-                                                        foreach (var Item in Model.lstassociate)
-                                                        {
+                            <div class="form-group col-md-3">
+                                <input type="submit" id="btnSearch" class="btn btn-success mt-4" name="Search" value="Search" />
+                            </div>
+                        </div>
+                        <br />
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                                <thead>
+                                    <tr>
+                                        <th>Sr No.</th>
+                                        <th>Login Id</th>
+                                        <th>Name</th>
+                                        <th>Leg</th>
+                                        <th>Joining Date</th>
+                                        <th>Package</th>
+                                        <th>Activation Date</th>
+                                        <th>Mobile No</th>
+                                        <th>Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @if (Model != null)
+                                    {
+                                        if (Model.lstassociate != null)
+                                        {
+                                            int i = 1;
+                                            foreach (var Item in Model.lstassociate)
+                                            {
                                                 <tr class="text-left">
                                                     <td>@i</td>
-
                                                     <td>@Item.LoginId</td>
                                                     <td>@Item.Name</td>
                                                     <td>@Item.Leg</td>
@@ -104,27 +89,22 @@
                                                     <td>@Item.Package</td>
                                                     <td>@Item.PermanentDate</td>
                                                     <td>@Item.Mobile</td>
-
                                                     <td>@Item.Status</td>
-
                                                 </tr>
-                                                            i++;
-                                                        }
+                                                i++;
+                                            }
 
-                                                    }
-                                                }
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                                        }
+                                    }
+                                </tbody>
+                            </table>
                         </div>
                     </div>
-                </section>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
+    //==============================================================================  
 }
 <script src="../vendor/jquery/jquery.min.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
