--- a/HMGreenCityMLM/Views/KYCDocuments/KYCDocuments.cshtml
+++ b/HMGreenCityMLM/Views/KYCDocuments/KYCDocuments.cshtml
@@ -5,114 +5,83 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
-    <div class="col-lg-12">
-        <br />
-    </div>
-    <!-- /.col-lg-12 -->
-</div>
 
-<!-- /.row -->
+
 @using (Html.BeginForm("KYCDocuments", "KYCDocuments", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    <br />
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
+    //==================================================================================================================
+    <section class="section">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h6 class="mb-0">Upload KYC</h6>
+                            <span style="color: red">
+                                @TempData["DocumentUpload"]
+                            </span>
+                            @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
+                        </div>
+                        <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Upload KYC</span>
-                                        </a>
-                                    </li>
-
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-
-                                        <div class="row">
-                                            <div class="col-lg-4">
-                                                <div class="form-group">
-                                                    <label>Adhar Number <span style="color:red">*</span></label>
-                                                    @Html.TextBoxFor(m => m.AdharNumber, new { @class = "form-control", @required = "required" })
-                                                    @Html.DisplayFor(m => m.AdharStatus, new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(m => m.AdharNumber)
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-4">
-                                                <div class="form-group">
-                                                    <label>Pan Number <span style="color:red">*</span></label>
-                                                    @Html.TextBoxFor(m => m.PanNumber, new { @class = "form-control", @required = "required" })
-                                                    @Html.DisplayFor(m => m.PanStatus, new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(m => m.PanNumber)
-                                                    @*<input type ="text" id="txtLastName" value="@item1.LastName" disabled="disabled" class="form-control" />*@
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-4">
-                                                <div class="form-group">
-                                                    <label>Document Number <span style="color:red">*</span></label>
-                                                    @Html.TextBoxFor(m => m.DocumentNumber, new { @class = "form-control", @required = "required" })
-                                                    @Html.DisplayFor(m => m.DocumentStatus, new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(m => m.DocumentNumber)
-                                                    @*<input type ="text" id="txtMobile"  value="@item1.Mobile" disabled="disabled" class="form-control" />*@
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="row">
-                                            <div class="col-lg-4">
-                                                <div class="form-group">
-                                                    <label>Adhar Image <span style="color:red">*</span></label>
-                                                    <input type="file" name="postedFile" required="required" />
-                                                    <br />
-                                                    <img src="@Url.Content(Model.AdharImage)" height="120" width="180" />
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-4">
-                                                <div class="form-group">
-                                                    <label>Pan Image <span style="color:red">*</span></label>
-                                                    <input type="file" name="postedFile" required="required" />
-                                                    <br />
-                                                    <img src="@Url.Content(Model.PanImage)" height="120" width="180" />
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-4">
-                                                <div class="form-group">
-                                                    <label>Document Image <span style="color:red">*</span></label>
-                                                    <input type="file" name="postedFile" required="required" />
-                                                    <br />
-                                                    <img src="@Url.Content(Model.DocumentImage)" height="120" width="180" />
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div class="form-group">
-                                                    <input type="submit" id="btnUpdate" class="btn btn-success pull-right" name="btnUpdate" value="Update" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-row">
+                            <div class="form-group col-md-4">
+                                <label>Adhar Number <span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.AdharNumber, new { @class = "form-control", @required = "required" })
+                                @Html.DisplayFor(m => m.AdharStatus, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.AdharNumber)
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Pan Number <span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.PanNumber, new { @class = "form-control", @required = "required" })
+                                @Html.DisplayFor(m => m.PanStatus, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.PanNumber)
+                                @*<input type ="text" id="txtLastName" value="@item1.LastName" disabled="disabled" class="form-control" />*@
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Document Number <span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.DocumentNumber, new { @class = "form-control", @required = "required" })
+                                @Html.DisplayFor(m => m.DocumentStatus, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.DocumentNumber)
+                                @*<input type ="text" id="txtMobile"  value="@item1.Mobile" disabled="disabled" class="form-control" />*@
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Adhar Image <span style="color:red">*</span></label>
+                                <input type="file" name="postedFile" required="required" />
+                                <br />
+                                <img src="@Url.Content(Model.AdharImage)" height="120" width="180" />
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Pan Image <span style="color:red">*</span></label>
+                                <input type="file" name="postedFile" required="required" />
+                                <br />
+                                <img src="@Url.Content(Model.PanImage)" height="120" width="180" />
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Document Image <span style="color:red">*</span></label>
+                                <input type="file" name="postedFile" required="required" />
+                                <br />
+                                <img src="@Url.Content(Model.DocumentImage)" height="120" width="180" />
+                            </div>
+                            <div class="form-group col-md-3">
+                                <input type="submit" id="btnUpdate" class="btn btn-success" name="btnUpdate" value="Update" />
                             </div>
                         </div>
                     </div>
-                </section>
+                </div>
             </div>
         </div>
-    </div>
-
-
+    </section>
+    //==================================================================================================================
+    
 }
 
