--- a/HMGreenCityMLM/Views/Profile/ChangePassword.cshtml
+++ b/HMGreenCityMLM/Views/Profile/ChangePassword.cshtml
@@ -14,79 +14,60 @@
 <!-- /.row -->
 @using (Html.BeginForm("ChangePassword", "Profile", FormMethod.Post, new { @id = "form1" }))
 {
+    //==================================================================================================================
+    <section class="section">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h6 class="mb-0">Change Password</h6>
+                            <span style="color: red">
+                                @TempData["Product"]
+                            </span>
+                            @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
+                        </div>
+                        <p style="color: red;display: block; margin-bottom:0px; text-align:center">
 
-
-    <br />
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Change Password</span>
-                                        </a>
-                                    </li>
+        </div>
 
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-
-                                        <div class="row">
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <label>Password Type <span style="color:red">*</span></label>
-                                                    @Html.DropDownListFor(m => m.PasswordType, new SelectList(ViewBag.ddlPasswordType, "Value", "Text"), new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(m => m.PasswordType)
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <label>Old Password <span style="color:red">*</span></label>
-                                                    @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(m => m.OldPassword)
-                                                    @*<input type ="text" id="txtLastName" value="@item1.LastName" disabled="disabled" class="form-control" />*@
-                                                </div>
-                                            </div>
-
-                                        </div>
-
-                                        <div class="row">
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <label>New Password <span style="color:red">*</span></label>
-                                                    @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(m => m.NewPassword)
-                                                    @*<input type ="text" id="txtMobile"  value="@item1.Mobile" disabled="disabled" class="form-control" />*@
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <br />
-                                                    <input type="submit" id="btnUpdate" class="btn btn-success pull-left" name="btnUpdate" value="Update" onclick="return validate();" />
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
+        <div class="row">
+            <div class="col-12 col-md-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-row">
+                            <div class="form-group col-md-4">
+                                <label>Password Type <span style="color:red">*</span></label>
+                                @Html.DropDownListFor(m => m.PasswordType, new SelectList(ViewBag.ddlPasswordType, "Value", "Text"), new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.PasswordType)
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Old Password <span style="color:red">*</span></label>
+                                @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.OldPassword)
+                                @*<input type ="text" id="txtLastName" value="@item1.LastName" disabled="disabled" class="form-control" />*@
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>New Password <span style="color:red">*</span></label>
+                                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.NewPassword)
+                                @*<input type ="text" id="txtMobile"  value="@item1.Mobile" disabled="disabled" class="form-control" />*@
+                            </div>
+                            <div class="form-group col-md-3">
+                                <input type="submit" id="btnUpdate" class="btn btn-success pull-left" name="btnUpdate" value="Update" onclick="return validate();" />
                             </div>
                         </div>
                     </div>
-                </section>
+                </div>
             </div>
         </div>
-    </div>
-
+    </section>
+    //==================================================================================================================
+    
 }
 <style>
     .errortext {
