--- a/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -138,7 +138,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
-                                    <table class="table table-striped table-hover" id="tableExportsss" style="width:100%;">
+                                    <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
                                         <thead>
                                             <tr>
                                                 <th>Sr No.</th>
