--- a/HMGreenCityMLM/Views/User/ViewProfile.cshtml
+++ b/HMGreenCityMLM/Views/User/ViewProfile.cshtml
@@ -13,152 +13,112 @@
 <!-- /.row -->
 @using (Html.BeginForm("ViewProfile", "User", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
-    <br />
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
+    //==================================================================================================================
+    <section class="section">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <h6 class="mb-0">Edit Profile</h6>
+                            <span style="color: red">
+                                @TempData["UpdateProfile"]
+                            </span>
+                            @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
+                        </div>
+                        <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Edit Profile</span>
-                                        </a>
-                                    </li>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-row">
+                            <div class="form-group col-md-3">
+                                <label>First Name <span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.FirstName)
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Last Name</label>
+                                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.LastName)
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Mobile <span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control", @onkeypress = "return isNumberKey(event);" })
+                                @Html.ValidationMessageFor(m => m.Mobile)
+                            </div>
+                            <div class="form-group col-md-3">
+                                <img src="@Model.ProfilePicture" height="80" width="80" />
+                                <input type="file" name="fileProfilePicture" id="Image" />
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Sponsor Id</label>
+                                @Html.TextBoxFor(m => m.SponsorId, new { @class = "form-control", @disabled = "disabled" })
+                                @Html.ValidationMessageFor(m => m.SponsorId)
+                                @*<input type ="text"  value="@item1.SponsorId" disabled="disabled" class="form-control" />*@
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Sponsor Name</label>
+                                @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", @disabled = "disabled" })
+                                @Html.ValidationMessageFor(m => m.SponsorName)
+                                @*<input type ="text"  value="@item1.SponsorName" disabled="disabled" class="form-control" />*@
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Email Id</label>
+                                @Html.TextBoxFor(m => m.EmailId, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.EmailId)
+                                @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Joining Date</label>
+                                @Html.TextBoxFor(m => m.JoiningDate, new { @class = "form-control", @disabled = "disabled" })
+                                @Html.ValidationMessageFor(m => m.JoiningDate)
+                                @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Account Number <span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.AccountNumber, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.AccountNumber)
+                                @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>IFSC <span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.IFSC, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.IFSC)
+                                @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
+                            </div>
 
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-
-
-                                        <div class="row">
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <label>First Name <span style="color:red">*</span></label>
-                                                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(m => m.FirstName)
-                                                    <br />
-                                                    <label>Last Name</label>
-                                                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(m => m.LastName)
-                                                    <br />
-                                                    <label>Mobile <span style="color:red">*</span></label>
-                                                    @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control", @onkeypress = "return isNumberKey(event);" })
-                                                    @Html.ValidationMessageFor(m => m.Mobile)
-                                                </div>
-                                            </div>
-                                            @*<div class="col-lg-3">
-                                                    <div class="form-group">
-
-                                                    </div>
-                                                </div>*@
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <img src="@Model.ProfilePicture" height="190" width="250" />
-                                                    <input type="file" name="fileProfilePicture" id="Image" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <label>Sponsor Id</label>
-                                                    @Html.TextBoxFor(m => m.SponsorId, new { @class = "form-control", @disabled = "disabled" })
-                                                    @Html.ValidationMessageFor(m => m.SponsorId)
-                                                    @*<input type ="text"  value="@item1.SponsorId" disabled="disabled" class="form-control" />*@
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <label>Sponsor Name</label>
-                                                    @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", @disabled = "disabled" })
-                                                    @Html.ValidationMessageFor(m => m.SponsorName)
-                                                    @*<input type ="text"  value="@item1.SponsorName" disabled="disabled" class="form-control" />*@
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <label>Email Id</label>
-                                                    @Html.TextBoxFor(m => m.EmailId, new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(m => m.EmailId)
-                                                    @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <label>Joining Date</label>
-                                                    @Html.TextBoxFor(m => m.JoiningDate, new { @class = "form-control", @disabled = "disabled" })
-                                                    @Html.ValidationMessageFor(m => m.JoiningDate)
-                                                    @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <label>Account Number <span style="color:red">*</span></label>
-                                                    @Html.TextBoxFor(m => m.AccountNumber, new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(m => m.AccountNumber)
-                                                    @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <label>IFSC <span style="color:red">*</span></label>
-                                                    @Html.TextBoxFor(m => m.IFSC, new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(m => m.IFSC)
-                                                    @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <label>Bank Name <span style="color:red">*</span></label>
-                                                    @Html.TextBoxFor(m => m.BankName, new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(m => m.BankName)
-                                                    @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <label>Bank Branch <span style="color:red">*</span></label>
-                                                    @Html.TextBoxFor(m => m.BankBranch, new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(m => m.BankBranch)
-                                                    @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div class="form-group">
-                                                    <input type="submit" id="btnUpdate" class="btn btn-success pull-right" name="btnUpdate" value="Update" onclick="return editProfile()" />
-                                                    <input type="button" id="btnEdit" class="btn btn-primary pull-right" value="Edit" onclick="editProfile()" style="display:none" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="form-group col-md-3">
+                                <label>Bank Name <span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.BankName, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.BankName)
+                                @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label>Bank Branch <span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.BankBranch, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.BankBranch)
+                                @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
+                            </div>
+                            <div class="form-group col-md-3">
+                                <input type="submit" id="btnUpdate" class="btn btn-success" name="btnUpdate" value="Update" onclick="return editProfile()" />
+                                <input type="button" id="btnEdit" class="btn btn-primary" value="Edit" onclick="editProfile()" style="display:none" />
                             </div>
                         </div>
                     </div>
-                </section>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
+    //==================================================================================================================
+    
 }
- 
-
 <style>
     .errortext {
        border: 2px solid red !important;
@@ -167,6 +127,7 @@
 </style>
 <script>
     function editProfile() {
+        debugger;
         $(".errortext").removeClass("errortext");
         if ($('#FirstName').val() == '') {
             $("#FirstName").addClass('errortext');
