--- a/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
+++ b/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
@@ -17,6 +17,31 @@
     <!-- Custom style CSS -->
     <link rel="stylesheet" href="~/assetsAdmin/css/custom.css">
     <link rel='shortcut icon' type='image/x-icon' href='~/assetsAdmin/img/favicon.png' />
+
+
+    <style>
+        .main-sidebar .sidebar-menu li a {
+            position: relative;
+            display: flex;
+            align-items: center;
+            height: 50px;
+            padding: 0 20px;
+            width: 100%;
+            letter-spacing: 0.3px;
+            color: #000000 !important;
+            font-weight: 600;
+            text-decoration: none;
+        }
+
+        .main-sidebar .sidebar-menu li ul.dropdown-menu li a {
+            color: #000000 !important;
+            height: 35px;
+            padding-left: 50px;
+            font-weight: 700;
+        }
+    </style>
+
+
 </head>
 
 <body>
