--- a/HMGreenCityMLM/Views/Shared/_Layout.cshtml
+++ b/HMGreenCityMLM/Views/Shared/_Layout.cshtml
@@ -194,6 +194,8 @@
     <script src="~/assetsAdmin/js/scripts.js"></script>
     <!-- Custom JS File -->
     <script src="~/assetsAdmin/js/custom.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
+    <script src="../../Autofill/jquery-ui.js"></script>
 
 
 </body>
