--- a/HMGreenCityMLM/Views/User/BinaryTree.cshtml
+++ b/HMGreenCityMLM/Views/User/BinaryTree.cshtml
@@ -567,12 +567,37 @@
         <div class="content-header row">
         </div>
         <div class="content-body">
+
+
+
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center justify-content-between">
+                                <h5 class="mb-0">Binary Tree</h5>
+                                @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
+                            </div>
+                            @*<p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                                @TempData["PayPayout"]
+                            </p>*@
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
+
             <!-- users edit start -->
             <section class="users-edit">
                 <div class="card">
                     <div class="card-content">
                         <div class="card-body">
-                            <ul class="nav nav-tabs mb-3" role="tablist">
+                            @*<ul class="nav nav-tabs mb-3" role="tablist">
                                 <li class="nav-item">
                                     <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
                                        aria-controls="account" role="tab" aria-selected="true">
@@ -580,14 +605,19 @@
                                     </a>
                                 </li>
 
-                            </ul>
+                            </ul>*@
+
+
+
+
+
                             <div class="tab-content">
                                 <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
 
                                     <div class="row">
                                         <div class="col-12">
-                                            <div class="card">
-                                                <div class="card-body">
+                                            @*<div class="card">
+                                                <div class="card-body">*@
                                                     <div class="form-row">
                                                         <div class="col-md-2"></div>
 
@@ -795,8 +825,8 @@
 
                                                         </div>
                                                     </div>
-                                                </div>
-                                            </div>
+                                                @*</div>
+                                            </div>*@
                                         </div>
                                     </div>
 
