--- a/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
@@ -121,7 +121,7 @@
                     <div class="col-lg-6">
                         <div class="card panel-default">
                             <div class="card-header h5 text-dark">
-                                Investment Details
+                                Business Details
                             </div>
                             <!-- /.panel-heading -->
                             <div class="card-body">
