--- a/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -184,7 +184,7 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-header">
-                                <h4 class="card-title">Investment Details</h4>
+                                <h4 class="card-title">Business Details</h4>
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
@@ -192,7 +192,7 @@
                                             <thead>
                                                 <tr>
                                                     <th>Sr No.</th>
-                                                    <th>Product Name</th>
+                                                    <th>Business Type</th>
                                                     <th>Amount</th>
                                                     <th>Status</th>
 
@@ -228,7 +228,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-xl-6 col-lg-6">
                         <div class="card">
                             <div class="card-header">
                                 <h4 class="card-title">Notification</h4>
@@ -272,7 +272,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12">
+                    <div class="col-xl-6 col-lg-6">
                         <div class="card">
                             <div class="card-header">
                                 <h4 class="card-title">Total Business</h4>
