--- a/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
@@ -294,7 +294,7 @@
                 var data = new google.visualization.DataTable();
 
                 data.addColumn('string', 'Month');
-                data.addColumn('number', 'Investment');
+                data.addColumn('number', 'Business');
                 for (var i = 0; i < datare.length; i++) {
                     data.addRow([datare[i].Month, parseInt(datare[i].Amount)]);
                 }
