--- a/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
+++ b/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
@@ -379,6 +379,7 @@
         background-image: url(../../images/TreeIcon/star.png) !important;
         display: block;
         margin: 0 auto;
+         background-size: cover;
     }
 
     i.Silver {
@@ -396,6 +397,7 @@
         background-image: url(../../images/TreeIcon/Gold.png) !important;
         display: block;
         margin: 0 auto;
+         background-size: cover;
     }
 
     i.Platinum {
@@ -404,6 +406,7 @@
         background-image: url(../../images/TreeIcon/Platinum.png) !important;
         display: block;
         margin: 0 auto;
+         background-size: cover;
     }
 
     i.Daimond {
@@ -412,6 +415,7 @@
         background-image: url(../../images/TreeIcon/Daimond.png) !important;
         display: block;
         margin: 0 auto;
+         background-size: cover;
     }
 
     i.Crown {
@@ -420,6 +424,7 @@
         background-image: url(../../images/TreeIcon/Crown.png) !important;
         display: block;
         margin: 0 auto;
+         background-size: cover;
     }
 
     i.HMKAward {
@@ -428,6 +433,7 @@
         background-image: url(../../images/TreeIcon/HMKAward.png) !important;
         display: block;
         margin: 0 auto;
+         background-size: cover;
     }
 
     #lblDisplayName {
@@ -599,7 +605,6 @@
                                 </div>
                                 <div class="col-md-10">
                                     <div class="row">
-
                                         <div class="col-md-1 offset-md-5">
                                             <div class="award_img">
                                                 <img src="~/images/TreeIcon/HMKAward.png" alt="image" />
@@ -642,7 +647,6 @@
                                                 <span>Star</span>
                                             </div>
                                         </div>
-
                                     </div>
                                 </div>
                             </div>
