--- a/HMGreenCityMLM/Views/User/BinaryTree.cshtml
+++ b/HMGreenCityMLM/Views/User/BinaryTree.cshtml
@@ -381,6 +381,7 @@
         background-image: url(../../images/TreeIcon/star.png) !important;
         display: block;
         margin: 0 auto;
+         background-size: cover;
     }
 
     i.Silver {
@@ -398,6 +399,7 @@
         background-image: url(../../images/TreeIcon/Gold.png) !important;
         display: block;
         margin: 0 auto;
+         background-size: cover;
     }
 
     i.Platinum {
@@ -406,6 +408,7 @@
         background-image: url(../../images/TreeIcon/Platinum.png) !important;
         display: block;
         margin: 0 auto;
+         background-size: cover;
     }
 
     i.Daimond {
@@ -414,6 +417,7 @@
         background-image: url(../../images/TreeIcon/Daimond.png) !important;
         display: block;
         margin: 0 auto;
+         background-size: cover;
     }
 
     i.Crown {
@@ -422,6 +426,7 @@
         background-image: url(../../images/TreeIcon/Crown.png) !important;
         display: block;
         margin: 0 auto;
+         background-size: cover;
     }
 
     i.HMKAward {
@@ -430,6 +435,7 @@
         background-image: url(../../images/TreeIcon/HMKAward.png) !important;
         display: block;
         margin: 0 auto;
+         background-size: cover;
     }
 
     #lblDisplayName {
@@ -592,7 +598,6 @@
                                 </div>
                                 <div class="col-md-10">
                                     <div class="row">
-
                                         <div class="col-md-1 offset-md-5">
                                           <div class="award_img">
                                               <img src="~/images/TreeIcon/HMKAward.png" alt="image"/>
@@ -635,8 +640,6 @@
                                                 <span>Star</span>
                                             </div>
                                         </div>
-                                        
-                                        
                                     </div>
                                 </div>
                             </div>
