--- a/HMGreenCityMLM/Views/Permission/SetPermission.cshtml
+++ b/HMGreenCityMLM/Views/Permission/SetPermission.cshtml
@@ -92,7 +92,7 @@
                                                 </tr>
                                                 i++;
                                             }
-                                            <input type="hidden" id="hdRows" name="hdRows" value="@i" />
+                                            <input style="display:none" type="text" id="hdRows" name="hdRows" value="@i" />
                                         }
                                     }
                                 </tbody>
@@ -129,9 +129,7 @@
         }
 
         return true;
-
     }
-
 </script>
 <style>
     .errortext{
