--- a/HMGreenCityMLM/Views/Home/Login.cshtml
+++ b/HMGreenCityMLM/Views/Home/Login.cshtml
@@ -18,21 +18,32 @@
     <!-- Custom style CSS -->
     <link rel="stylesheet" href="~/assetsAdmin/css/custom.css">
     <link rel='shortcut icon' type='image/x-icon' href='~/assetsAdmin/img/favicon.png' />
+
+    <style>
+        #LoginBg{
+           display:flex;
+           justify-content:center;
+           align-content:center;
+           height:100vh;
+           align-items:center;
+        }
+    </style>
 </head>
 
-<body>
+<body style="background:#fff">
     <div class="loader"></div>
     <div id="app">
-        <section class="section">
+        <section class="section" id="LoginBg">
             <div class="container mt-5">
                 <div class="row">
-                    <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4">
+                    <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-6 offset-lg-3 col-xl-6 offset-xl-3">
                         <div class="card card-primary overflow-hidden">
-                            <div class="card-header" style="background:#3c919d">
-                                <h4 class="text-white">Login</h4>
+                            <div class="card-header text-center d-block">
+                                @*<h3 class="mb-0">Login</h3>*@
+                                <img style="height:63px; margin:auto;" src="/assetsAdmin/img/user.png"  alt="logo"/>
                             </div>
                             <div class="card-body">
-                                <h6 class="mb-2">
+                                <h6 class="mb-4 text-center">
                                     Welcome back, please login to your account.
                                 </h6>
                              @using (Html.BeginForm("LoginAction", "Home", FormMethod.Post, new { @id = "signupForm" }))
