--- a/HMGreenCityMLM/Views/Admin/EmpBinaryTree.cshtml
+++ b/HMGreenCityMLM/Views/Admin/EmpBinaryTree.cshtml
@@ -1877,7 +1877,7 @@
                             status = "girl-active"
                         }
                     }
-                    else if (status == "Y") {
+                    else if (status == "H") {
 
                         if (gender == "M") {
                             status = "men-hold"
