--- a/HMGreenCityMLM/Views/User/BinaryTree.cshtml
+++ b/HMGreenCityMLM/Views/User/BinaryTree.cshtml
@@ -379,7 +379,7 @@
     i.Star {
         width: 65px;
         height: 65px;
-        background-image: url(../../images/TreeIcon/star.png) !important;
+        background-image: url(../../images/TreeIcon/Star.png) !important;
         display: block;
         margin: 0 auto;
         background-size: cover;
@@ -1845,7 +1845,7 @@
                         status = "girl-active"
                     }
                 }
-                else if (status == "Y") {
+                else if (status == "H") {
 
                     if (gender == "M") {
                         status = "men-hold"
