--- a/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -24,6 +24,10 @@
         background: linear-gradient(to right, #2e1437, #2e1437, #2e1437) !important;
         color: #fff;
     }
+    .tab5 {
+        background: linear-gradient(135deg, orange 60%,gray) !important;
+        color: #fff;
+    }
 
     .awardBg {
         background: rgb(76,167,186);
@@ -122,6 +126,19 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-xl-3 col-lg-6">
+                        <div class="card tab5">
+                            <div class="card-statistic-3">
+                                <div class="card-icon card-icon-large"><i class=""></i></div>
+                                <div class="card-content">
+                                    <h4 class="card-title">@ViewBag.TotalHold</h4>
+                                    <span class="text-white">Total Hold</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col-xl-3 col-lg-6">
                         <div class="card tab2">
                             <div class="card-statistic-3">
